src/app/global.css
header {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap;
  row-gap: 4px;
  width: 100%;

  @media (min-width: 960px) {
    position: fixed;
    /* twoslash popups are z-index 9 */
    z-index: 10;
    height: 40px;
    top: 0;
    left: 0;
  }

  :not(nav) {
    text-align: center;
    margin: 0 4px;
  }
}

.shiki {
  border-radius: 8px;
  padding: 15px;
}

[data-theme="dark"] {
  .shiki,
  .shiki span {
    color: var(--shiki-dark) !important;
    background-color: var(--shiki-dark-bg) !important;
    font-style: var(--shiki-dark-font-style) !important;
    font-weight: var(--shiki-dark-font-weight) !important;
    text-decoration: var(--shiki-dark-text-decoration) !important;
    --twoslash-popup-bg: var(--shiki-dark-bg) !important;
  }
}

